--- a/index.html
+++ b/index.html
@@ -9,16 +9,20 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css"
         integrity="undefined" crossorigin="anonymous">
     <!-- Boostrap CDN JavaScript -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js" integrity="undefined"
-        crossorigin="anonymous"></script>
+    <!--   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js" integrity="undefined"
+        crossorigin="anonymous"></script> -->
     <!-- Bootstrap JavaScript Bundle -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="undefined"
-        crossorigin="anonymous"></script>
+    <!--  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="undefined"
+        crossorigin="anonymous"></script> -->
 
     <!-- FontAwesome -->
     <link rel="stylesheet"
         href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css"
         integrity="undefined" crossorigin="anonymous">
+    
+    <!-- Google font html attempt -->
+    <!-- <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet"> -->
 
     <!-- CSS link-->
     <link rel="stylesheet" href="assets/css/style.css">
@@ -29,9 +33,12 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#"> Staycation Britain logo
-            </a>
+    <!-- Navigation bar -->
+
+    <nav class="sticky-top navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand" href="#">
+            <img id="suitcase" src="assets/images/suitcase-font.png" alt="" loading="lazy">
+        </a>
 
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -44,26 +51,32 @@
                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
+                    <a class="nav-link" href="#">Locations</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                    <a class="nav-link" href="#">Contact</a>
                 </li>
             </ul>
         </div>
     </nav>
 
+    <!-- Hero container -->
+
     <div class="jumbotron jumbotron-fluid">
-        <div class="container">
-            <h1 class="display-4">Fluid jumbotron</h1>
-            <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+        <div id="hero" class="container">
+            <h1 class="display-4">Staycation Britain</h1>
         </div>
     </div>
 
+    <div class = "container">
+        <p class = "intro"><span class = "capital">W</span>ell it’s that time of the year and you’ve decided you want to get away.  Britain has some fantastic beaches whether you like sand, pebbles, amusement arcades, bars, restaurants, kiss me quick hats, 99 ice creams or especially fish & chips on a pier....</p>
+    </div>
 
+    <div id = "pic-tiles" class = "container">
+        <img src = "assets/images/ice-cream.jpg" alt = "Hand holding melting 99 ice-cream">
+        <img src = "assets/images/beach-people.jpg" alt = "People running into the sea">
+        <img src = "assets/images/fish-and-chips-fade.jpg" alt = "Fish and Chips dinner">
+    </div>
 </body>
 
 </html>
