Pic tiles applied

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
     <!-- Hero container -->
 
-    <div class="jumbotron jumbotron-fluid">
+    <div class="jumbotron-fluid">
         <div id="hero" class="container">
             <h1 class="display-4">Staycation Britain</h1>
         </div>
@@ -72,10 +72,17 @@
         <p class = "intro"><span class = "capital">W</span>ell it’s that time of the year and you’ve decided you want to get away.  Britain has some fantastic beaches whether you like sand, pebbles, amusement arcades, bars, restaurants, kiss me quick hats, 99 ice creams or especially fish & chips on a pier....</p>
     </div>
 
-    <div id = "pic-tiles" class = "container">
-        <img src = "assets/images/ice-cream.jpg" alt = "Hand holding melting 99 ice-cream">
-        <img src = "assets/images/beach-people.jpg" alt = "People running into the sea">
-        <img src = "assets/images/fish-and-chips-fade.jpg" alt = "Fish and Chips dinner">
+    <div class = "container-fluid">
+        <div class = "flex row">
+            <div class = "col align-self-start">
+                <img class = "pic-tiles-1" src = "assets/images/ice-cream.jpg" alt = "Hand holding melting 99 ice-cream">
+            </div>
+            <div class = "col align-self-center">
+                <img class = "pic-tiles-2" src = "assets/images/beach-people.jpg" alt = "People running into the sea">
+            </div>
+            <div class = "col align-self-start">
+                <img class = "pic-tiles-3" src = "assets/images/fish-and-chips-fade.jpg" alt = "Fish and Chips dinner">
+            </div>    
     </div>
 </body>
 
