responsive design updated for inttro

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet"
         href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css"
         integrity="undefined" crossorigin="anonymous">
-    
+
     <!-- Google font html attempt -->
     <!-- <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet"> -->
@@ -63,27 +63,38 @@
     <!-- Hero container -->
 
     <div class="jumbotron-fluid">
-        <div id="hero" class="container">
-            <h1 class="display-4">Staycation Britain</h1>
+        <div class="container-fluid">
+            <div class="row">
+                <div id="hero">
+                </div>
+                <div class="row">
+                    <h1 class="display-4">Staycation Britain</h1>
+                </div>
+            </div>
         </div>
     </div>
 
-    <div class = "container">
-        <p class = "intro"><span class = "capital">W</span>ell it’s that time of the year and you’ve decided you want to get away.  Britain has some fantastic beaches whether you like sand, pebbles, amusement arcades, bars, restaurants, kiss me quick hats, 99 ice creams or especially fish & chips on a pier....</p>
+    <div class="container">
+        <p class="intro"><span class="capital">W</span>ell it’s that time of the year and you’ve decided you
+            want to get away. Britain has some fantastic beaches whether you like sand, pebbles, amusement
+            arcades, bars, restaurants, kiss me quick hats, 99 ice creams or especially fish & chips on a
+            pier....</p>
     </div>
 
-    <div class = "container-fluid">
-        <div class = "flex row">
-            <div class = "col align-self-start">
-                <img class = "pic-tiles-1" src = "assets/images/ice-cream.jpg" alt = "Hand holding melting 99 ice-cream">
+    <div class="container-fluid">
+        <div class="flex row">
+            <div class="col align-self-start">
+                <img class="pic-tiles-1" src="assets/images/ice-cream.jpg" alt="Hand holding melting 99 ice-cream">
             </div>
-            <div class = "col align-self-center">
-                <img class = "pic-tiles-2" src = "assets/images/beach-people.jpg" alt = "People running into the sea">
+            <div class="col align-self-center">
+                <img class="pic-tiles-2" src="assets/images/beach-people.jpg" alt="People running into the sea">
             </div>
-            <div class = "col align-self-start">
-                <img class = "pic-tiles-3" src = "assets/images/fish-and-chips-fade.jpg" alt = "Fish and Chips dinner">
-            </div>    
+            <div class="col align-self-start">
+                <img class="pic-tiles-3" src="assets/images/fish-and-chips-fade.jpg" alt="Fish and Chips dinner">
+            </div>
+        </div>
     </div>
+
 </body>
 
 </html>
