--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
 
     <div class="container">
         <p class="intro"><span class="capital">W</span>ell it’s that time of the year and you’ve decided you
-            want to get away. Britain has some fantastic beaches whether you like sand, pebbles, amusement
+            want to get away.<br>
+            Britain has some fantastic beaches whether you like sand, pebbles, amusement
             arcades, bars, restaurants, kiss me quick hats, 99 ice creams or especially fish & chips on a
             pier....</p>
     </div>
@@ -91,6 +92,129 @@
             </div>
             <div class="col align-self-start">
                 <img class="pic-tiles-3" src="assets/images/fish-and-chips-fade.jpg" alt="Fish and Chips dinner">
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <p class="intro2"><span class="capital">H</span>ere are some of my favourite places I’ve personally visited.<br>
+            If you decide to visit, I hope you enjoy it as much as I did and do......</p>
+    </div>
+
+    <div class="row row-cols-1 row-cols-md-2">
+        <div class="col mb-4">
+            <div class="card">
+                <img src="assets/images/brighton-pier.jpg" class="card-img-top"
+                    alt="Brighton pier, UK, with sunset in the background">
+                <div class="card-body">
+                    <h5 class="card-title">BRIGHTON</h5>
+                    <p class="card-text"><span class="capital">T</span>he city is just a 60 minute train ride from London and only 30 minutes train
+                        ride from Gatwick Airport.<br> 
+                        Brighton Station is right in the city centre so you will be able to
+                        smell the sea as soon as you step off the train. Getting around is simple as it is a compact city and easy to explore on foot or public
+                        transport.<br><br>
+                        Make time to visit the city villages too including Hove; famous for its colourful
+                        beach huts & Regency architecture, and Rottingdean, a picturesque, traditional English village.
+                        Discover things to do in Brighton such as the Brighton Palace Pier, the Royal Pavilion and the
+                        brand new British Airways i360.<br><br>
+                        The city is also home to a cornucopia of cultural delights as well as big name shops and hundreds of independent boutiques.
+                        There are many award-winning restaurants in Brighton & Hove catering for all tastes from classic
+                        fish 'n' chips to creative vegetarian restaurants and even a zero waste restaurant.<br><br>
+                        With so much to explore you will need to book accommodation in Brighton to really make the most
+                        of your visit and see all the city has to offer. Brighton & Hove also makes a great base for
+                        exploring the stunning Sussex countryside including the South Downs National Park, a beautiful
+                        spot for cycling, hiking and other activities.
+
+                        Whether this is your first visit to Brighton or your hundreth, here you will find everything you
+                        need to plan and book your Brighton break.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col mb-4">
+            <div class="card">
+                <img src="assets/images/newquay.jpg" class="card-img-top" alt="Popular Newquay beach">
+                <div class="card-body">
+                    <h5 class="card-title">NEWQUAY</h5>
+                    <p class="card-text">Located on Cornwall’s Atlantic Coast, Newquay has previously been voted as “One
+                        of the Nation's Favourite Seaside Towns” in the prestigious Which Holiday Survey, “Best Family
+                        Holiday Destination” by readers of COAST magazine, and recently won Gold for “Best Seaside Towns
+                        for Families 2019” by Days Out with the Kids. Newquay also has some of Cornwall’s finest
+                        beaches! Newquay’s laid-back charm is here for everyone to enjoy.
+
+                        Whether you’re looking for a contemporary self catering apartment, a high quality holiday park
+                        to bring your camper, caravan or tent, a great value bed and breakfast or a top quality hotel
+                        and spa, Newquay has it all.
+
+                        Newquay is open all year, easy to get to by rail, road or air and offers a range of top quality
+                        attractions within easy reach, alongside classic events and exhilarating activities both in and
+                        out of the water, and some of Cornwall’s best beaches.
+
+                        Fistral Beach is Newquay's iconic beach, quite simply one of the most consistent and best
+                        surfing beaches in the UK. This beautiful beach is west facing, long and sandy and backed by
+                        sand dunes, rocks and cliffs.
+
+                        Fistral is the perfect family beach offering simple pleasures of sea and surf combined with
+                        first class beach and seafront facilities including surf equipment hire, lessons, car parking,
+                        restaurants and cafes.
+
+                        This world class beach is also home to some of the biggest events and festivals.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col mb-4">
+            <div class="card">
+                <img src="assets/images/cardigan-bay.jpg" class="card-img-top" alt="Overview of Cardigan Bay">
+                <div class="card-body">
+                    <h5 class="card-title">CARDIGAN BAY</h5>
+                    <p class="card-text">Cardigan, West Wales, is the gateway to the Teifi Valley and the Ceredigion and
+                        Pembrokeshire Coastal Paths. The ancient town sits on the estuary of the River Teifi at the base
+                        of Cardigan Bay.
+
+                        Its unspoilt townscape and rich heritage provide a nostalgic backdrop to a thriving culture of
+                        arts and crafts, events and music festivals, and is a good base from which to discover
+                        Ceredigion, Pembrokeshire and Carmarthenshire.
+
+                        A day out at Penbryn needs to be planned but is well worth the extra effort involved. The car
+                        park and facilities are some 400 metres from the beach! But there is a turning circle and
+                        dropping off point at the beach edge.
+
+                        Penbryn is owned by the National Trust The beach, almost a mile in length, is unspoilt and the
+                        fine golden sand and shallow waters make it perfect for children Discover the delights of the
+                        rock pools or there is fine walking to be had.
+
+                        There is a woodland walk from the car park to the beach or at low tide Tresaith can be reached.
+                        Please do not bring your dog. The immediate area is sympathetic to coastal and woodland birds
+                        and the sea is home to Dolphins Porpoise and Seals.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col mb-4">
+            <div class="card">
+                <img src="assets/images/scotland-skye-3.jpg" class="card-img-top" alt="Picturesque Isle of Skye">
+                <div class="card-body">
+                    <h5 class="card-title">ISLE OF SKYE</h5>
+                    <p class="card-text">Skye is one of the top locations in Scotland to visit. It is famous for its
+                        scenery and landscapes that will take your breath away.
+
+                        The Island of Skye is 50 miles long and the largest of the Inner Hebrides. The capital is
+                        Portree. Villages in the north of the Island include Dunvegan, Edinbane, Uig and Staffin.
+                        Notable villages in the south of Skye include Broadford, Armadale, Carbost, Elgol and Kyleakin.
+
+                        The Island has a rich History covering many topics, such as: Dinosaur Fossils, Clan Warfare,
+                        Highland Clearances and the infamous ‘Bonnie Prince Charlie’ and the Jacobite Rebellion.
+                        Both Clan MacDonald and Clan MacLeod have their Clan Castles on the Island and should be on your
+                        list of places to visit.
+
+                        The Isle of Skye is also a great destination for Wildlife watching with the White Tailed Sea
+                        Eagle at the top of bird watchers lists. Otters, seals, whales, dolphins and red deer are just
+                        some of the other impressive creatures that can be seen on and around the Isle of Skye.
+
+                        Skye is a world class destination for walkers and climbers. ‘The Cuillin Range’ and ‘The
+                        Trotternish Ridge’ offer challenging climbs and interesting scrambles. The Cuillin Range offers
+                        12 Munros - peaks above 3000ft (914m). There are many great walks on Skye to be enjoyed by the
+                        less experienced, check both our Top Ten Skye Walks and Island Walks for detailed route guides.
+                    </p>
+                </div>
             </div>
         </div>
     </div>
