--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <!-- Bootstrap JavaScript Bundle -->
     <!--  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="undefined"
         crossorigin="anonymous"></script> -->
+    <!-- JQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.js"
+        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 
     <!-- FontAwesome -->
     <link rel="stylesheet"
@@ -51,7 +54,7 @@
                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Locations</a>
+                    <a class="nav-link" href="#locations">Locations</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Contact</a>
@@ -101,32 +104,48 @@
             If you decide to visit, I hope you enjoy it as much as I did and do......</p>
     </div>
 
-    <div class="row row-cols-1 row-cols-md-2">
+    <div id="locations" class="row row-cols-1 row-cols-md-2">
         <div class="col mb-4">
             <div class="card">
                 <img src="assets/images/brighton-pier.jpg" class="card-img-top"
                     alt="Brighton pier, UK, with sunset in the background">
                 <div class="card-body">
                     <h5 class="card-title">BRIGHTON</h5>
-                    <p class="card-text"><span class="capital">T</span>he city is just a 60 minute train ride from London and only 30 minutes train
-                        ride from Gatwick Airport.<br> 
+                    <p class="card-text"><span class="capital">T</span>he city is just a 60 minute train ride from
+                        London and only 30 minutes train ride from Gatwick Airport.</p>
+                    <a class="read_more_button">Read more</a>
+                    <br>
+                    <span class="card-text-collapsed">
                         Brighton Station is right in the city centre so you will be able to
-                        smell the sea as soon as you step off the train. Getting around is simple as it is a compact city and easy to explore on foot or public
+                        smell the sea as soon as you step off the train. Getting around is simple as it is a compact
+                        city and easy to explore on foot or public
                         transport.<br><br>
                         Make time to visit the city villages too including Hove; famous for its colourful
-                        beach huts & Regency architecture, and Rottingdean, a picturesque, traditional English village.
-                        Discover things to do in Brighton such as the Brighton Palace Pier, the Royal Pavilion and the
+                        beach huts & Regency architecture, and Rottingdean, a picturesque, traditional English
+                        village.
+                        Discover things to do in Brighton such as the Brighton Palace Pier, the Royal Pavilion and
+                        the
                         brand new British Airways i360.<br><br>
-                        The city is also home to a cornucopia of cultural delights as well as big name shops and hundreds of independent boutiques.
-                        There are many award-winning restaurants in Brighton & Hove catering for all tastes from classic
+                        The city is also home to a cornucopia of cultural delights as well as big name shops and
+                        hundreds of independent boutiques.
+                        There are many award-winning restaurants in Brighton & Hove catering for all tastes from
+                        classic
                         fish 'n' chips to creative vegetarian restaurants and even a zero waste restaurant.<br><br>
-                        With so much to explore you will need to book accommodation in Brighton to really make the most
+                        With so much to explore you will need to book accommodation in Brighton to really make the
+                        most
                         of your visit and see all the city has to offer. Brighton & Hove also makes a great base for
-                        exploring the stunning Sussex countryside including the South Downs National Park, a beautiful
+                        exploring the stunning Sussex countryside including the South Downs National Park, a
+                        beautiful
                         spot for cycling, hiking and other activities.
 
-                        Whether this is your first visit to Brighton or your hundreth, here you will find everything you
-                        need to plan and book your Brighton break.</p>
+                        Whether this is your first visit to Brighton or your hundreth, here you will find everything
+                        you
+                        need to plan and book your Brighton break.</span>
+                    </p>
+                </div>
+                <div class="container">
+                    <div id = "map-brighton">
+                    </div>
                 </div>
             </div>
         </div>
@@ -218,6 +237,15 @@
             </div>
         </div>
     </div>
+
+    <!-- <script
+        src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js">
+    </script> -->
+
+    <script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA7FvKpzgVhkZRmkGj7JLKjvR91_JjVAeQ&callback=initMap">
+    </script>
+    <script src="assets/js/script.js"></script>
 
 </body>
 
