Map js added and map for Brighton added

--- a/index.html
+++ b/index.html
@@ -246,6 +246,7 @@
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA7FvKpzgVhkZRmkGj7JLKjvR91_JjVAeQ&callback=initMap">
     </script>
     <script src="assets/js/script.js"></script>
+    <script src="assets/js/maps.js"></script>
 
 </body>
 
