Newquay map applied but when one is active the other isn't - to investigate

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     </p>
                 </div>
                 <div class="container">
-                    <div id = "map-brighton">
+                    <div id="map-brighton">
                     </div>
                 </div>
             </div>
@@ -177,6 +177,10 @@
                         restaurants and cafes.
 
                         This world class beach is also home to some of the biggest events and festivals.</p>
+                </div>
+                <div class="container">
+                    <div id="map-newquay">
+                    </div>
                 </div>
             </div>
         </div>
@@ -243,8 +247,17 @@
     </script> -->
 
     <script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA7FvKpzgVhkZRmkGj7JLKjvR91_JjVAeQ&callback=initMapBrighton">
+    </script>
+    <script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBnZk7GysALY48dq1AuILnYjQeKoe5XNmY&callback=initMapNewquay">
+    </script>
+    <!-- <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA7FvKpzgVhkZRmkGj7JLKjvR91_JjVAeQ&callback=initMap">
     </script>
+    <script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA7FvKpzgVhkZRmkGj7JLKjvR91_JjVAeQ&callback=initMap">
+    </script> -->
     <script src="assets/js/script.js"></script>
     <script src="assets/js/maps.js"></script>
 
