--- a/index.html
+++ b/index.html
@@ -247,11 +247,11 @@
     </script> -->
 
     <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA7FvKpzgVhkZRmkGj7JLKjvR91_JjVAeQ&callback=initMapBrighton">
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA7FvKpzgVhkZRmkGj7JLKjvR91_JjVAeQ&callback=initMap">
     </script>
-    <script async defer
+    <!-- <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBnZk7GysALY48dq1AuILnYjQeKoe5XNmY&callback=initMapNewquay">
-    </script>
+    </script> -->
     <!-- <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA7FvKpzgVhkZRmkGj7JLKjvR91_JjVAeQ&callback=initMap">
     </script>
