maps with different locations solution applied, updating text design...currently at Cardigan

--- a/index.html
+++ b/index.html
@@ -119,18 +119,21 @@
                         Brighton Station is right in the city centre so you will be able to
                         smell the sea as soon as you step off the train. Getting around is simple as it is a compact
                         city and easy to explore on foot or public
-                        transport.<br><br>
+                        transport.
+                        <br><br>
                         Make time to visit the city villages too including Hove; famous for its colourful
                         beach huts & Regency architecture, and Rottingdean, a picturesque, traditional English
                         village.
                         Discover things to do in Brighton such as the Brighton Palace Pier, the Royal Pavilion and
                         the
-                        brand new British Airways i360.<br><br>
+                        brand new British Airways i360.
+                        <br><br>
                         The city is also home to a cornucopia of cultural delights as well as big name shops and
                         hundreds of independent boutiques.
                         There are many award-winning restaurants in Brighton & Hove catering for all tastes from
                         classic
-                        fish 'n' chips to creative vegetarian restaurants and even a zero waste restaurant.<br><br>
+                        fish 'n' chips to creative vegetarian restaurants and even a zero waste restaurant.
+                        <br><br>
                         With so much to explore you will need to book accommodation in Brighton to really make the
                         most
                         of your visit and see all the city has to offer. Brighton & Hove also makes a great base for
@@ -154,29 +157,37 @@
                 <img src="assets/images/newquay.jpg" class="card-img-top" alt="Popular Newquay beach">
                 <div class="card-body">
                     <h5 class="card-title">NEWQUAY</h5>
-                    <p class="card-text">Located on Cornwall’s Atlantic Coast, Newquay has previously been voted as “One
-                        of the Nation's Favourite Seaside Towns” in the prestigious Which Holiday Survey, “Best Family
+                    <p class="card-text"><span class="capital">L</span>ocated on Cornwall’s Atlantic Coast, Newquay has
+                        previously been voted</p>
+                    <a class="read_more_button">Read more</a>
+                    <br>
+                    <span class="card-text-collapsed">
+                        as “One of the Nation's Favourite Seaside Towns” in the prestigious Which Holiday Survey, “Best
+                        Family
                         Holiday Destination” by readers of COAST magazine, and recently won Gold for “Best Seaside Towns
-                        for Families 2019” by Days Out with the Kids. Newquay also has some of Cornwall’s finest
-                        beaches! Newquay’s laid-back charm is here for everyone to enjoy.
-
+                        for Families 2019” by Days Out with the Kids.
+                        <br>
+                        Newquay also has some of Cornwall’s finest beaches! Newquay’s laid-back charm is here for
+                        everyone to enjoy.
+                        <br><br>
                         Whether you’re looking for a contemporary self catering apartment, a high quality holiday park
                         to bring your camper, caravan or tent, a great value bed and breakfast or a top quality hotel
                         and spa, Newquay has it all.
-
+                        <br><br>
                         Newquay is open all year, easy to get to by rail, road or air and offers a range of top quality
                         attractions within easy reach, alongside classic events and exhilarating activities both in and
                         out of the water, and some of Cornwall’s best beaches.
-
+                        <br><br>
                         Fistral Beach is Newquay's iconic beach, quite simply one of the most consistent and best
                         surfing beaches in the UK. This beautiful beach is west facing, long and sandy and backed by
                         sand dunes, rocks and cliffs.
-
+                        <br><br>
                         Fistral is the perfect family beach offering simple pleasures of sea and surf combined with
                         first class beach and seafront facilities including surf equipment hire, lessons, car parking,
                         restaurants and cafes.
-
-                        This world class beach is also home to some of the biggest events and festivals.</p>
+                        <br><br>
+                        This world class beach is also home to some of the biggest events and festivals.</span>
+                    </p>
                 </div>
                 <div class="container">
                     <div id="map-newquay">
@@ -189,8 +200,13 @@
                 <img src="assets/images/cardigan-bay.jpg" class="card-img-top" alt="Overview of Cardigan Bay">
                 <div class="card-body">
                     <h5 class="card-title">CARDIGAN BAY</h5>
-                    <p class="card-text">Cardigan, West Wales, is the gateway to the Teifi Valley and the Ceredigion and
-                        Pembrokeshire Coastal Paths. The ancient town sits on the estuary of the River Teifi at the base
+                    <p class="card-text"><span class="capital">C</span>ardigan, West Wales, is the gateway to the Teifi Valley and the Ceredigion and
+                        Pembrokeshire Coastal Paths.
+                        </p>
+                    <a class="read_more_button">Read more</a>
+                    <br>
+                    <span class="card-text-collapsed">
+                         The ancient town sits on the estuary of the River Teifi at the base
                         of Cardigan Bay.
 
                         Its unspoilt townscape and rich heritage provide a nostalgic backdrop to a thriving culture of
@@ -207,7 +223,12 @@
 
                         There is a woodland walk from the car park to the beach or at low tide Tresaith can be reached.
                         Please do not bring your dog. The immediate area is sympathetic to coastal and woodland birds
-                        and the sea is home to Dolphins Porpoise and Seals.</p>
+                        and the sea is home to Dolphins Porpoise and Seals.</span>
+                    </p>
+                </div>
+                <div class="container">
+                    <div id="map-cardigan">
+                    </div>
                 </div>
             </div>
         </div>
@@ -216,7 +237,7 @@
                 <img src="assets/images/scotland-skye-3.jpg" class="card-img-top" alt="Picturesque Isle of Skye">
                 <div class="card-body">
                     <h5 class="card-title">ISLE OF SKYE</h5>
-                    <p class="card-text">Skye is one of the top locations in Scotland to visit. It is famous for its
+                    <p class="card-text"><span class="capital">S</span>kye is one of the top locations in Scotland to visit. It is famous for its
                         scenery and landscapes that will take your breath away.
 
                         The Island of Skye is 50 miles long and the largest of the Inner Hebrides. The capital is
@@ -238,6 +259,10 @@
                         less experienced, check both our Top Ten Skye Walks and Island Walks for detailed route guides.
                     </p>
                 </div>
+                <div class="container">
+                    <div id="map-skye">
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -249,15 +274,7 @@
     <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA7FvKpzgVhkZRmkGj7JLKjvR91_JjVAeQ&callback=initMap">
     </script>
-    <!-- <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBnZk7GysALY48dq1AuILnYjQeKoe5XNmY&callback=initMapNewquay">
-    </script> -->
-    <!-- <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA7FvKpzgVhkZRmkGj7JLKjvR91_JjVAeQ&callback=initMap">
-    </script>
-    <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA7FvKpzgVhkZRmkGj7JLKjvR91_JjVAeQ&callback=initMap">
-    </script> -->
+
     <script src="assets/js/script.js"></script>
     <script src="assets/js/maps.js"></script>
 
