Cards and top contact section updated

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <a class="nav-link" href="#locations">Locations</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="#contact">Contact</a>
                 </li>
             </ul>
         </div>
@@ -208,19 +208,19 @@
                     <span class="card-text-collapsed">
                          The ancient town sits on the estuary of the River Teifi at the base
                         of Cardigan Bay.
-
+                        <br>
                         Its unspoilt townscape and rich heritage provide a nostalgic backdrop to a thriving culture of
                         arts and crafts, events and music festivals, and is a good base from which to discover
                         Ceredigion, Pembrokeshire and Carmarthenshire.
-
+                        <br><br>
                         A day out at Penbryn needs to be planned but is well worth the extra effort involved. The car
                         park and facilities are some 400 metres from the beach! But there is a turning circle and
                         dropping off point at the beach edge.
-
+                        <br><br>
                         Penbryn is owned by the National Trust The beach, almost a mile in length, is unspoilt and the
                         fine golden sand and shallow waters make it perfect for children Discover the delights of the
                         rock pools or there is fine walking to be had.
-
+                        <br><br>
                         There is a woodland walk from the car park to the beach or at low tide Tresaith can be reached.
                         Please do not bring your dog. The immediate area is sympathetic to coastal and woodland birds
                         and the sea is home to Dolphins Porpoise and Seals.</span>
@@ -239,24 +239,28 @@
                     <h5 class="card-title">ISLE OF SKYE</h5>
                     <p class="card-text"><span class="capital">S</span>kye is one of the top locations in Scotland to visit. It is famous for its
                         scenery and landscapes that will take your breath away.
+                        </p>
+                    <a class="read_more_button">Read more</a>
+                    <br>
+                    <span class="card-text-collapsed">
 
                         The Island of Skye is 50 miles long and the largest of the Inner Hebrides. The capital is
                         Portree. Villages in the north of the Island include Dunvegan, Edinbane, Uig and Staffin.
                         Notable villages in the south of Skye include Broadford, Armadale, Carbost, Elgol and Kyleakin.
-
+                        <br><br>
                         The Island has a rich History covering many topics, such as: Dinosaur Fossils, Clan Warfare,
                         Highland Clearances and the infamous ‘Bonnie Prince Charlie’ and the Jacobite Rebellion.
                         Both Clan MacDonald and Clan MacLeod have their Clan Castles on the Island and should be on your
                         list of places to visit.
-
+                        <br><br>
                         The Isle of Skye is also a great destination for Wildlife watching with the White Tailed Sea
                         Eagle at the top of bird watchers lists. Otters, seals, whales, dolphins and red deer are just
                         some of the other impressive creatures that can be seen on and around the Isle of Skye.
-
+                        <br><br>
                         Skye is a world class destination for walkers and climbers. ‘The Cuillin Range’ and ‘The
                         Trotternish Ridge’ offer challenging climbs and interesting scrambles. The Cuillin Range offers
                         12 Munros - peaks above 3000ft (914m). There are many great walks on Skye to be enjoyed by the
-                        less experienced, check both our Top Ten Skye Walks and Island Walks for detailed route guides.
+                        less experienced, check both our Top Ten Skye Walks and Island Walks for detailed route guides.</span>
                     </p>
                 </div>
                 <div class="container">
@@ -266,6 +270,15 @@
             </div>
         </div>
     </div>
+
+    <div class = "container">
+        <h2 id = "contact" class ="text-center">Contact</h2>
+    </div>
+
+    <div>
+        <p class = "text-center contact-desc">Contact us for any advice on these or any other places to stay in Britain and also sign up for our free email newsletter for the latest updates</p>
+    </div>
+
 
     <!-- <script
         src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js">
