Suitcase icon replaced with fontawesome logo and nav re-styled

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 
     <nav class="sticky-top navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="#">
-            <img id="suitcase" src="assets/images/suitcase-font.png" alt="" loading="lazy">
+            <i class="fas fa-suitcase" aria-hidden="true"></i>
+            <span class = "sr-only">Suitcase icon</span>
         </a>
 
 
