--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 
     <!-- FontAwesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="undefined" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+        integrity="undefined" crossorigin="anonymous">
 
     <!-- Google font html attempt -->
     <!-- <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -39,7 +40,7 @@
     <nav class="sticky-top navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="#">
             <i class="fas fa-suitcase" aria-hidden="true"></i>
-            <span class = "sr-only">Suitcase icon</span>
+            <span class="sr-only">Suitcase icon</span>
         </a>
 
 
