--- a/index.html
+++ b/index.html
@@ -14,6 +14,20 @@
     <!-- Bootstrap JavaScript Bundle -->
     <!--  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="undefined"
         crossorigin="anonymous"></script> -->
+
+    <!-- Bootdtrap JavaScript and JQuery recommendation-->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+    </script>
+
+
+
     <!-- JQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
@@ -123,7 +137,7 @@
                         London and only 30 minutes train ride from Gatwick Airport.</p>
                     <a class="read_more_button">Read more</a>
                     <br>
-                    <span class="card-text-collapsed">
+                    <span class="card-text-collapsed panel-collapse collapse in">
                         Brighton Station is right in the city centre so you will be able to
                         smell the sea as soon as you step off the train. Getting around is simple as it is a compact
                         city and easy to explore on foot or public
@@ -169,7 +183,7 @@
                         previously been voted</p>
                     <a class="read_more_button">Read more</a>
                     <br>
-                    <span class="card-text-collapsed">
+                    <span class="card-text-collapsed panel-collapse collapse in">
                         as “One of the Nation's Favourite Seaside Towns” in the prestigious Which Holiday Survey, “Best
                         Family
                         Holiday Destination” by readers of COAST magazine, and recently won Gold for “Best Seaside Towns
@@ -214,7 +228,7 @@
                     </p>
                     <a class="read_more_button">Read more</a>
                     <br>
-                    <span class="card-text-collapsed">
+                    <span class="card-text-collapsed panel-collapse collapse in">
                         The ancient town sits on the estuary of the River Teifi at the base
                         of Cardigan Bay.
                         <br>
@@ -252,7 +266,7 @@
                     </p>
                     <a class="read_more_button">Read more</a>
                     <br>
-                    <span class="card-text-collapsed">
+                    <span class="card-text-collapsed panel-collapse collapse in">
 
                         The Island of Skye is 50 miles long and the largest of the Inner Hebrides. The capital is
                         Portree. Villages in the north of the Island include Dunvegan, Edinbane, Uig and Staffin.
