Logo description added and readme file updated once again with requirements

--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
     <!-- Navigation bar -->
 
     <nav class="sticky-top navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="#">
-            <i class="fas fa-suitcase" aria-hidden="true"></i>
+        <a class="navbar-brand" href="#home">
+            <i class="fas fa-suitcase" aria-hidden="true"><span id = "nav-staycation-britain"> Staycation Britain</span></i>
+           
             <span class="sr-only">Suitcase icon</span>
         </a>
 
