Cards all in one column now

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <!-- Navigation bar -->
 
     <nav class="sticky-top navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="#home">
+        <a class="navbar-brand nav-link" href="#">
             <i class="fas fa-suitcase" aria-hidden="true"><span id = "nav-staycation-britain"> Staycation Britain</span></i>
            
             <span class="sr-only">Suitcase icon</span>
@@ -127,7 +127,7 @@
 
     <!-- Locations -->
 
-    <div id="locations" class="row row-cols-1 row-cols-md-2">
+    <div id="locations" class="row row-cols-1">
         <div class="col mb-4">
             <div class="card">
                 <img src="assets/images/brighton-pier.jpg" class="card-img-top"
@@ -169,7 +169,7 @@
                         need to plan and book your Brighton break.</span>
                     </p>
                 </div>
-                <div class="container">
+                <div class="container-fluid">
                     <div id="map-brighton">
                     </div>
                 </div>
@@ -212,7 +212,7 @@
                         This world class beach is also home to some of the biggest events and festivals.</span>
                     </p>
                 </div>
-                <div class="container">
+                <div class="container-fluid">
                     <div id="map-newquay">
                     </div>
                 </div>
@@ -250,7 +250,7 @@
                         and the sea is home to Dolphins Porpoise and Seals.</span>
                     </p>
                 </div>
-                <div class="container">
+                <div class="container-fluid">
                     <div id="map-cardigan">
                     </div>
                 </div>
@@ -289,7 +289,7 @@
                         guides.</span>
                     </p>
                 </div>
-                <div class="container">
+                <div class="container-fluid">
                     <div id="map-skye">
                     </div>
                 </div>
