--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <div class="jumbotron-fluid">
         <div class="container-fluid">
             <div class="row">
-                <div id="hero">
+                    <div id="hero">
                 </div>
                 <div class="row">
                     <h1 class="display-4">Staycation Britain</h1>
@@ -95,6 +95,7 @@
     <!-- Introduction -->
 
     <div class="container">
+        <h2 class = "title-intro">Places to stay in Britain</h2>
         <p class="intro"><span class="capital">W</span>ell it’s that time of the year and you’ve decided you
             want to get away.<br>
             Britain has some fantastic beaches whether you like sand, pebbles, amusement
